--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -427,6 +427,7 @@ Example:
 
 
 \subsection{Submodule type as parameter}
+\label{sec:ch-ned-lang:like}
 \index{module!as parameter}
 
 Sometimes it is convenient to make the type of a submodule
