--- a/doc/usman/ch-sim-lib.tex
+++ b/doc/usman/ch-sim-lib.tex
@@ -4448,6 +4448,7 @@ the class members list in simple module inspectors.
 
 
 \subsection{Garbage collection}
+\label{sec:ch-sim-lib:garbage-collection}
 
 \textbf{How it's done}
 
